<resources>
    <string name="app_name">DiyEditText</string>
    <string name="error_pwd">密码错误</string>
    <string name="telephone_num">手机号码</string>
    <string name="password">密码</string>
    <string name="pwd_forget">忘记密码</string>
    <string name="login_content_isempty">手机号/密码不能为空</string>
    <string name="pwd_warn">8到16位数字和字母</string>
    <string name="image_vode">图形验证码</string>
    <string name="get_vcode">获取验证码</string>
    <string name="get_sms">验证码</string>
</resources>
