<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:edit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/white"
    android:paddingTop="18dp">

    <com.fanrry.diyedittext.DiyEditText
        android:id="@+id/et_telephone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        edit:hint="@string/telephone_num"
        edit:intPutType="@integer/type_number" />

    <com.fanrry.diyedittext.DiyEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        edit:hint="@string/password"
        edit:intPutType="@integer/type_password" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="@string/pwd_warn"
            android:textColor="@color/black_999999"
            android:textSize="14sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp"
            android:text="@string/pwd_forget"
            android:textColor="@color/black_333333"
            android:textSize="14sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_image_vcode"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <com.fanrry.diyedittext.DiyEditText
            edit:marginRight="129"
            android:id="@+id/et_vcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            edit:hint="@string/image_vode"
            edit:isVCode="true"
            edit:intPutType="@integer/type_text" />

        <LinearLayout
            android:id="@+id/layout_vcode_container"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <View
                android:id="@+id/v_line"
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/btn_get_vcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/get_vcode" />

            <ProgressBar
                android:id="@+id/vcode_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_vcode"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_sms"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp">

        <com.fanrry.diyedittext.DiyEditText
            edit:marginRight="129"
            android:id="@+id/et_sms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            edit:hint="@string/get_sms"
            edit:isVCode="true"
            edit:intPutType="@integer/type_sms" />

        <LinearLayout
            android:id="@+id/layout_sms_container"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_sms"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <View
                android:id="@+id/v_line_2"
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/btn_get_sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/get_vcode" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>